
- Issue #19286: Directories in ``package_data`` are no longer added to
  the filelist, preventing failure outlined in the ticket.

- Issue #19435: Fix directory traversal attack on CGIHttpRequestHandler.

Tests
-----

- Issue #18702: All skipped tests now reported as skipped.

- Issue #19085: Added basic tests for all tkinter widget options.


What's New in Python 3.3.3 release candidate 1?
===============================================

*Release date: 27-Oct-2013*

Core and Builtins
-----------------

- Issue #18603: Ensure that PyOS_mystricmp and PyOS_mystrnicmp are in the
  Python executable and not removed by the linker's optimizer.

- Issue #19279: UTF-7 decoder no more produces illegal strings.

- Fix macro expansion of _PyErr_OCCURRED(), and make sure to use it in at
  least one place so as to avoid regressions.

- Issue #19014: memoryview.cast() is now allowed on zero-length views.

- Issue #19098: Prevent overflow in the compiler when the recursion limit is set
  absurdly high.

- Issue #18942: sys._debugmallocstats() output was damaged on Windows.

- Issue #18667: Add missing "HAVE_FCHOWNAT" symbol to posix._have_functions.

- Issue #18368: PyOS_StdioReadline() no longer leaks memory when realloc()
  fails.

- Issue #16741: Fix an error reporting in int().

- Issue #17899: Fix rare file descriptor leak in os.listdir().

- Issue #18552: Check return value of PyArena_AddPyObject() in
  obj2ast_object().

- Issue #18560: Fix potential NULL pointer dereference in sum().

- Issue #15905: Fix theoretical buffer overflow in handling of sys.argv[0],
  prefix and exec_prefix if the operation system does not obey MAXPATHLEN.

- Issue #18344: Fix potential ref-leaks in _bufferedreader_read_all().

- Issue #17872: Fix a segfault in marshal.load() when input stream returns
  more bytes than requested.

- Issue #18426: Fix NULL pointer dereference in C extension import when
  PyModule_GetDef() returns an error.
